Prueba, para añadir una nueva interfaz que no requiera de expandable list, sino de linear layouts que se hacen visibles e invisibles.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="app_preferences">recetas</string>
     <string name="title_activity_edit_receta">EditRecetaActivity</string>
     <string name="numero">  1.-   </string>
+    <string name="title_activity_prueba">Prueba</string>
 
 </resources>
