Prueba finalizada, funciona correctamente. Próximos pasos:   -Cambiar la id generada para los EditText.   -Recoger el focus correctamente.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,7 @@
     <string name="title_activity_edit_receta">EditRecetaActivity</string>
     <string name="numero">  1.-   </string>
     <string name="title_activity_prueba">Prueba</string>
+    <string name="ingredientes">Ingredientes</string>
+    <string name="pasos">Pasos</string>
 
 </resources>
